# MyDiplomaThesisCode

./: README.md
Grammar/: expression-sv.fuze  sv.fuze
Semantic/: CMakeLists.txt  SystemVerilogAnalyzer.cpp  SystemVerilogAnalyzer.h  SystemVerilogOperationCode.cpp  SystemVerilogOperationCode.h  SystemVerilogPreview.cpp  SystemVerilogPreview.h  SystemVerilogSemantics_abstract.cpp  SystemVerilogSemantics_abstract.h  main.cpp  sv.sv
